optimize Library
